--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ img {
 a {
   text-decoration: none;
   color: #292F36;
+  transition: opacity 0.8s;
+}
+
+a:hover {
+  opacity: 0.5;
 }
 
 .container {
@@ -62,12 +67,27 @@ span.ul {
   color: #292F36;
 }
 
+.forSP {
+  display: none;
+}
+
+.forTBSP {
+  display: none;
+}
+
+.forPCTB {
+  display: inline;
+}
 
 #header .logo {
   display: flex;
   width: 177px;
   height: 50px;
   background-image: url(./../images/Logo.svg);
+}
+
+.gnav_sp {
+  display: none;
 }
 
 .gmenu {
@@ -558,6 +578,10 @@ span.ul {
   margin-bottom: 10px;
 }
 
+#counter .column4>.column_inner:last-child .itemise {
+  border-right: unset;
+}
+
 
 #blogarea .column3 {
   display: flex;
@@ -588,16 +612,17 @@ span.ul {
 
 .blog figcaption {
   position: absolute;
-  top: 13.125rem;
-  left: 1.25rem;
+  top: 77%;
+  left: 6%;
   background-color: #ffffff;
   border-radius: 8px 8px 8px 0;
   width: 129px;
-  height: 41px;
+  height: 12%;
   color: #4D5053;
-  text-align: center;
-  line-height: 41px;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .column_inner:nth-child(2) .blog {
@@ -787,7 +812,11 @@ span.ul {
   letter-spacing: 1px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
+  .forTBSP {
+    display: block;
+  }
+
   #header .container {
     justify-content: center;
     flex-direction: column;
@@ -795,6 +824,11 @@ span.ul {
 
   #header .gmenu {
     margin-top: 6px;
+    width: 80%;
+  }
+
+  .gmenu_inner {
+    width: 90%
   }
 
   #KV {
@@ -813,8 +847,17 @@ span.ul {
     font-size: 4.6rem;
   }
 
+  .column3>.column_inner {
+    height: unset;
+  }
+
   #work {
     height: 400px;
+  }
+
+  #work .description {
+    height: unset;
+    margin-bottom: 20px;
   }
 
   #aboutus {
@@ -831,12 +874,14 @@ span.ul {
   }
 
   #aboutus .subcontent {
+    height: fit-content;
     flex-direction: column;
     display: flex;
   }
 
   #aboutus .subcontent h2 {
     text-align: center;
+    margin-top: 30px;
   }
 
   #aboutus .image {
@@ -848,25 +893,199 @@ span.ul {
     border-radius: 0 200px 0 50px;
   }
 
+  #aboutus .content .button {
+    width: 100%;
+    display: flex;
+  }
+
+  #aboutus .btn-dark {
+    margin: auto;
+  }
+
+  #testimonial .container {
+    width: 90%;
+    margin-top: 100px;
+    height: 805px;
+  }
+
+  #testimonial .column_inner {
+    height: unset;
+  }
+
+  .client_data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .client_data .pic {
+    max-width: 77px;
+  }
+
+  #clientlogo .column5 {
+    width: 80%;
+    gap: 60px;
+  }
+
+  .column2 {
+    width: 90%;
+  }
+
+  .itemise .text {
+    text-align: center;
+  }
+
   #blogarea .column3 {
     display: block
+  }
+
+  #blogarea .blog {
+    width: 80%;
+  }
+
+  .blog figcaption {
+    top: 81%;
+    left: 4%;
   }
 
   #blogarea .column3>.column_inner {
     width: 100%;
     margin-bottom: 25px;
+    height: fit-content;
+  }
+
+  #blogarea .subcontent h3 {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 2.8rem;
+  }
+
+  #blogarea .subcontent .detail {
+    margin-top: 20px;
+  }
+
+  #contact .container {
+    margin-top: 100px;
+    height: 435px;
+    padding: unset;
+    border-radius: unset;
+  }
+
+  #footerarea .container {
+    width: 95%;
+  }
+
+  #footerarea .interno .info,
+  .socailmedia {
+    text-align: center;
+  }
+
+  .socailmedia {
+    width: 100%;
+    height: 95px;
+  }
+
+  .socailmedia a {
+    font-size: 22px;
+  }
+
+  .bottomMenu {
+    justify-content: center;
+  }
+
+  .bottomMenu dl {
+    margin-right: 80px;
+  }
+
+  .copyright p {
+    font-size: 17px;
   }
 }
 
-@media screen and (max-width:440px) {
+@media screen and (max-width:700px) {
+  .forSP {
+    display: block;
+  }
+
+  .forTBSP {
+    display: block;
+  }
+
+  .forPCTB {
+    display: none;
+  }
+
+  #header .container {
+    flex-direction: row;
+    position: relative;
+    height: 65px;
+  }
+
+  .gnav_sp {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 3px;
+    right: 0;
+  }
+
+  .menuline {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 23.5px;
+    border-top: 14px double #292F36;
+    border-bottom: 5px solid #292F36;
+  }
+
+  #header .gmenu {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: auto;
+    display: none;
+    /* display: flex; */
+    align-items: flex-start;
+    z-index: 1;
+    background-color: #00000bbd;
+    height: fit-content;
+  }
+
+  .search {
+    width: 100%;
+    position: fixed;
+  }
+
+  .gmenu_inner {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .gmenu_inner li {
+    width: 100%;
+  }
+
+  .gmenu_inner a {
+    line-height: 52px;
+    color: #ffffff;
+    width: 100%;
+    text-align: center;
+  }
+
   #KV {
     background: url(./../images/Photo_sp.jpg) no-repeat center bottom;
     height: 414px;
-    border-radius: 0 0 0 100px;
+    border-radius: 0 0 0 84px;
   }
 
   #KV h1 {
     font-size: 2.2rem;
+    line-height: 3rem;
   }
 
   #KV p {
@@ -893,5 +1112,244 @@ span.ul {
 
   #KV .mainvisual .copy {
     padding-top: 55px;
+  }
+
+  #work {
+    height: unset;
+  }
+
+  #work .column3 {
+    flex-wrap: wrap;
+    margin-top: 40px;
+  }
+
+  .column3>.column_inner {
+    width: 100%;
+  }
+
+  #aboutus .container {
+    margin-top: 40px;
+  }
+
+  #aboutus .image img {
+    border-radius: 0 90px 0 30px;
+  }
+
+  #aboutus .content h2 {
+    font-size: 40px;
+    line-height: 52.5px;
+  }
+
+  #aboutus .content p {
+    font-size: 18px;
+    letter-spacing: 1px;
+  }
+
+  #aboutus .content .button {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  #aboutus .btn-dark {
+    margin: 30px auto;
+    width: 200px;
+  }
+
+  #testimonial .container {
+    margin-top: 80px;
+    height: unset;
+  }
+
+  #testimonial h2 {
+    font-size: 40px;
+    line-height: 52.5px;
+    margin: 40px 20px 18px;
+  }
+
+  #testimonial .column3 {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+  }
+
+  #testimonial .column_inner {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 17px;
+  }
+
+  #testimonial .column_inner:last-child {
+    margin-bottom: 30px;
+  }
+
+  #testimonial .client {
+    justify-content: center;
+  }
+
+  .client_comment {
+    text-align: center;
+  }
+
+  #clientlogo .column5 {
+    gap: 40px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  #clientlogo .column5>.column_inner {
+    width: calc(50% / 2);
+  }
+
+  .heading {
+    width: 80%;
+    margin-top: 100px;
+    text-align: center;
+  }
+
+  .heading h2 {
+    font-size: 40px;
+    line-height: 52.5px;
+  }
+
+  .heading p {
+    font-size: 18px;
+  }
+
+  .column2>.column_inner {
+    margin-top: unset;
+  }
+
+  .column2>.column_inner:nth-child(2n+1),
+  .column2>.column_inner:nth-child(2n+2) {
+    margin-top: 32px;
+  }
+
+  #project .column_inner:nth-child(1) img {
+    border-top-right-radius: 45px;
+  }
+
+  #project .column_inner:nth-child(2) img {
+    border-top-left-radius: 45px;
+  }
+
+  #project .column_inner:nth-child(3) img {
+    border-bottom-right-radius: 45px;
+  }
+
+  #project .column_inner:nth-child(4) img {
+    border-bottom-left-radius: 45px;
+  }
+
+  #project .detail {
+    display: block;
+    margin-top: 7px;
+  }
+
+  #project .detail .projectname p:nth-child(1) {
+    font-size: 20px;
+    line-height: 26.25px;
+  }
+
+  #project .detail .projectname p {
+    font-size: 15px;
+    line-height: 25px;
+  }
+
+  #project .btn {
+    width: 45px;
+    height: 45px;
+    margin: 12px;
+  }
+
+  .projectbox {
+    width: 96%;
+  }
+
+  #counter {
+    height: 415px;
+  }
+
+  #counter .container {
+    margin-top: 80px;
+    padding: 17px 0 17px 0;
+  }
+
+  #counter .column4 {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  #counter .column4>.column_inner {
+    width: calc(80% / 2);
+  }
+
+  #counter .column4>.column_inner:nth-child(2n) .itemise {
+    border-right: unset;
+  }
+
+  .itemise .figure {
+    font-size: 78px;
+  }
+
+  .itemise .text {
+    margin-top: 2px;
+    font-size: 18px;
+  }
+
+  #blogarea .blog {
+    width: 100%;
+  }
+
+  #blogarea .column3 {
+    width: 90%;
+  }
+
+  .blog figcaption {
+    top: 77%;
+  }
+
+  #blogarea .subcontent h3 {
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+  }
+
+  #contact .subtitle {
+    padding: 0 40px;
+    text-align: center;
+  }
+
+  #contact .column1>.column_inner {
+    height: unset;
+  }
+
+  .socailmedia {
+    justify-content: space-evenly;
+  }
+
+  .bottomMenu {
+    flex-wrap: wrap;
+  }
+
+  .bottomMenu dl {
+    margin-right: 20px;
+  }
+
+  .bottomMenu dl:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .bottomMenu dl:nth-child(3) {
+    margin-top: 20px;
+  }
+
+  .bottomMenu dd {
+    font-size: 18px;
+    line-height: 42px;
+  }
+
+  .copyright p {
+    text-align: center;
   }
 }
